# led-board

./: .gitignore  Cargo.toml  README.md  justfile  partitions.json  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.zed/: settings.json
animations/: Cargo.toml
animations/src/: animations.rs  common.rs  draw.rs  fader.rs  lib.rs  playlist.rs  runner.rs  xp.rs
defmt_tcp/: Cargo.toml
defmt_tcp/src/: lib.rs
firmware/: Cargo.toml  memory.x
firmware/src/: config.rs  flash.rs  led_screen.rs  lib.rs  types.rs  ws2812.rs  ws2812p.rs
firmware/src/tasks/: common.rs  mod.rs  ppp.rs  usb_ethernet.rs  wifi.rs
firmware/src/tasks/http/: animation.rs  common.rs  config.rs  info.rs  macros.rs  mod.rs  ota.rs  web_socket.rs
rp235x_ota/: Cargo.toml
rp235x_ota/src/: lib.rs
scripts/: attach.sh  flash-setup.sh  ota.sh  run-ws-tcp.sh  run-ws.sh  upload-wifi-firmware.sh
sim/: Cargo.toml
sim/src/: lib.rs  main.rs  sim_screen.rs
utils/: Cargo.toml
utils/src/: lib.rs  local_fs.rs
utils/src/config/: mod.rs  storage.rs
web/: .gitignore  README.md  compile.sh  compress.ts  deno.json  deploy.sh  generate-manifest.ts  index.html  vite.config.ts
web/.zed/: settings.json
web/public/wasm/: manifest.json
web/src/: App.scss  App.tsx  index.tsx
web/src/components/: helper.ts  index.ts
web/src/components/Button/: index.tsx
web/src/components/Card/: index.tsx  style.scss
web/src/components/DateInput/: index.scss  index.tsx
web/src/components/DatePicker/: index.scss  index.tsx
web/src/components/DropZone/: index.tsx  style.scss
web/src/components/FormFields/: index.tsx
web/src/components/MagicFields/: index.tsx  nested.tsx
web/src/components/NavBar/: index.tsx  style.scss
web/src/components/TextInput/: index.tsx
web/src/lib/: index.ts
web/src/lib/core/: index.ts
web/src/lib/core/utils/: common.ts  date.ts  index.ts
web/src/lib/core/web/: index.ts
web/src/lib/device/: badge.ts  common.ts  dummy.ts  index.ts  real.ts
web/src/lib/wasm/: index.ts  protocol.ts  timer.ts
web/src/routes/: config.tsx  files.tsx  grid.tsx  index.tsx  remote.tsx  wifi.tsx
ws_client/: Cargo.toml
ws_client/src/: main.rs
