[package]
name = "animations"
version = "0.1.0"
edition = "2024"

[features]
std = ["once_cell/std"]
critical-section = ["once_cell/critical-section"]
defmt = ["dep:defmt"]

[dependencies]
embedded-graphics = "0.8.2"
embedded-graphics-core = "0.4.1"
micromath = { version = "2.1.0", features = ["num-traits"] }
num-traits = { version = "0.2.19", default-features = false }
nalgebra = { version = "0.34.2", default-features = false }
embedded-3dgfx = { version = "0.3.0", default-features = false, features = [
    "aa",
    "aa-coverage",
    "aa-heuristic",
    "row_width_96",
] }
libm = "0.2.16"
static_cell = "2.1.1"
once_cell = { version = "1.21.4", default-features = false, features = [
    "alloc",
] }
tupl = "0.5.1"
serde = { version = "1.0.228", default-features = false, features = [
    "alloc",
    "derive",
] }
ringbuf = { version = "0.5.0", default-features = false, features = ["alloc"] }

defmt = { version = "1.0.1", optional = true }
