[package]
name = "defmt-tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.1.0"

embedded-io-async = "0.7.0"

embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
