[package]
name = "rp235x-ota"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.1.0"
block_device = "0.1.3"
sha2 = "0.11.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

embedded-io-async = "0.7.0"

embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
